# Hillel

./: README.md
HW11/: CMakeLists.txt  README.md
HW11/cmake/modules/: warnings.cmake
HW11/src/: CMakeLists.txt
HW11/src/lib/: CMakeLists.txt  lib.cpp  lib.hpp
HW11/src/main/: CMakeLists.txt  main.cpp
